AK : fix for upload button not center aligned

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -85,7 +85,7 @@ a {
 }
 
 #upload-form {
-  width: 100px;
+  width: 138px;
   margin: 0 auto;
 }
 
@@ -108,7 +108,7 @@ button {
 .file-upload {
   display: block;
   padding: 1rem;
-  width: 100%;
+  width: 100px;
   border: 3px dashed #f55252;
   border-radius: 5px;
   cursor: pointer;
